# twod

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CLAUDE.md  LICENSE  Makefile  README.md  README.rst  environment.yml  fix.py  mkdocs.yml  pyproject.toml  tst.py
.github/workflows/: docs.yml  pytest.yaml  release.yaml
docs/: examples.md  geometry-concepts.md  index.md  installation.md  performance.md  quickstart.md
docs/api/: index.md
site/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/SUMMARY/: index.html
site/api/twod/: index.html
site/api/twod/constants/: index.html
site/api/twod/cpoint/: index.html
site/api/twod/crect/: index.html
site/api/twod/ellipse/: index.html
site/api/twod/exceptions/: index.html
site/api/twod/line/: index.html
site/api/twod/mixins/: index.html
site/api/twod/point/: index.html
site/api/twod/rect/: index.html
site/examples/: index.html
site/geometry-concepts/: index.html
site/installation/: index.html
site/performance/: index.html
site/quickstart/: index.html
site/search/: search_index.json
src/twod/: __init__.py  constants.py  cpoint.py  crect.py  ellipse.py  exceptions.py  line.py  mixins.py  point.py  rect.py  types.py
tests/: conftest.py  test_cpoint.py  test_cpoint_add.py  test_cpoint_div.py  test_cpoint_from_any.py  test_cpoint_iadd.py  test_cpoint_idiv.py  test_cpoint_imul.py  test_cpoint_isub.py  test_cpoint_mul.py  test_cpoint_ops.py  test_cpoint_polar.py  test_cpoint_pow.py  test_cpoint_sub.py  test_crect.py  test_crect_add.py  test_crect_floordiv.py  test_crect_in.py  test_crect_mul.py  test_crect_sub.py  test_crect_truediv.py  test_ellipse.py  test_line.py  test_line_ops.py  test_mixins.py  test_point.py  test_point_add.py  test_point_div.py  test_point_iadd.py  test_point_idiv.py  test_point_imul.py  test_point_isub.py  test_point_mul.py  test_point_ops.py  test_point_polar.py  test_point_pow.py  test_point_sub.py  test_rect.py  test_rect_add.py  test_rect_floordiv.py  (+5 more)
twod/: __init__.py  constants.py  ellipse.py  exceptions.py  point.py  rect.py  types.py
