[tool.poetry]
name = "twod"
version = "0.1.7"
description = "A two-dimensional geometry library for humans."
authors = ["jnyjny <erik.oshaughnessy@gmail.com>"]
readme = 'README.rst'
repository = 'https://github.com/JnyJny/twod.git'
classifiers = [
            "Development Status :: 3 - Alpha",
            "Intended Audience :: Developers",
            "License :: OSI Approved :: Apache Software License",
            "Programming Language :: Python :: 3.7",
	    "Topic :: Games/Entertainment",
	    "Topic :: Multimedia :: Graphics",
	    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.6"
coveralls = ""
pre-commit = "^1.17"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
