[project]
name = "twod"
version = "0.3.1"
description = "A two-dimensional geometry library for humans."
repository = 'https://github.com/JnyJny/twod.git'
readme = "README.md"
authors = [
    { name = "JnyJny", email = "erik.oshaughnessy@gmail.com" }
]
classifiers = [
            "Development Status :: 3 - Alpha",
            "Intended Audience :: Developers",
            "License :: OSI Approved :: Apache Software License",
            "Programming Language :: Python :: 3.7",
	    "Topic :: Games/Entertainment",
	    "Topic :: Multimedia :: Graphics",
	    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = []

[tool.poe.tasks]

# testing
_generate_coverage = "pytest --cov=./src/twod --cov-report=html"
_open_report = "open htmlcov/index.html"
coverage = [ "_generate_coverage", "_open_report"]

mypy = "mypy --config-file pyproject.toml src/twod"
ty = "ty check src/twod"

check = [ "mypy", "ty"]

# requirements

requirements = [
 { cmd = "uv -q export --output-file requirements.txt" },
 { cmd = "git add requirements.txt" },
 { cmd = "git commit -m 'requirements.txt updated from uv.lock'"},
]

# update version in pyproject

_patch_bump = "uv version --bump patch"
_minor_bump = "uv version --bump minor"
_major_bump = "uv version --bump major"

# add, commit, tag and commit pyproject updated by bump

_add = "git add pyproject.toml uv.lock"
_commit = {shell = "git commit -m v`uv version --short`"}
_tag = { shell = "git tag v`uv version --short`" }
_push = "git push --all"
_push_tags = "git push --tags"

_update_pyproject = ["_add", "_commit", "_tag", "_push_tags", "_push"]

publish_patch= ["_patch_bump", "_update_pyproject"]
publish_minor= ["_minor_bump", "_update_pyproject"]
publish_major= ["_major_bump", "_update_pyproject"]

publish = {ref = "publish_patch"}


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.8.1",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
    "ty>=0.0.1a6",
]
